style.css
body {
    font-family: 'Open Sans', sans-serif;
    height: 100vh;
    margin: 0;
}

section {
    padding-top: 1.25rem;
    padding-bottom: 1.25rem;
}

h2 {
    color: #094067;
}

p {
    color: #5f6c7b;
}

footer {
    text-align: center;
}

.white-background {
    background-color: #fffffe;
}

.blue-background {
    background-color: #d8eefe;
}

.navbar {
    padding-left: 1rem;
    padding-right: 1rem;
}

.navbar-collapse {
    flex-grow: 0;
}

.container-fluid {
    padding: 0;
}

.title {
    color: #ef4565;
    text-transform: uppercase;
    font-size: 1.625rem;
    padding-top: 0;
    padding-bottom: 0;
}

.section-wrapper {
    padding: 1rem;
    width: 90%;
    margin: auto;
}

.content-image {
    max-width: 100%;
    height: auto;
}

.section-content {
    display: grid;
    gap: 1.25rem;
    margin-top: 1.25rem;
}

.grid-wrapper {
    display: grid;
    grid-gap: 20px;
    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
}

.box {
    border-radius: 5px;
    height: 200px;
    padding: 1.25rem;
}

.box>p {
    margin-right: 0;
}

.white-background .box {
    background-color: #094067;
}

.white-background .box>h3 {
    color: #fffffe;
}

.white-background .box>p {
    color: #d8eefe;
}

.blue-background .box {
    background-color: #fffffe;
}

.blue-background .box>h3 {
    color: #094067;
}

.blue-background .box>p {
    color: #5f6c7b;
}

.social-links {
    padding: 0.75rem;
}

.social-links a {
    text-decoration: none;
}

.social-links li {
    display: inline;
}

.social-links li:not(:last-child) {
    padding-right: 1rem;
}

.social-icon {
    filter: invert(7%) sepia(93%) saturate(5591%) hue-rotate(194deg) brightness(103%) contrast(93%);
    height: auto;
    width: 40px;
}

@media (min-width: 575px) {
    .title {
        padding-bottom: 0;
    }

    .content-wrapper {
        display: flex;
        align-items: center;
        flex-wrap: wrap;
        margin: auto;
    }

    .section-wrapper {
        width: 90%;
    }

    .section-content {
        grid-template-columns: auto 60%;
    }

    .projects {
        display: inline;
    }
}

